@@ -1,5 +1,5 @@
 .\"
-.\" "$Id: cupstestppd.man,v 1.2 2002/12/17 18:59:56 swdev Exp $"
+.\" "$Id: cupstestppd.man,v 1.3 2003/01/24 21:32:13 mike Exp $"
 .\"
 .\"   cupstestppd man page for the Common UNIX Printing System (CUPS).
 .\"
@@ -26,10 +26,10 @@
 cupstestppd \- test conformance of ppd files
 .SH SYNOPSIS
 .B cupstestppd
-[ -v ] filename.ppd [ ... filenameN.ppd ]
+[ -q ] [ -v ] filename.ppd [ ... filenameN.ppd ]
 .br
 .B cupstestppd
-[ -v ] -
+[ -q ] [ -v ] -
 .SH DESCRIPTION
 \fIcupstestppd\fR tests the conformance of PPD files to the
 Adobe PostScript Printer Description file format specification
@@ -42,8 +42,12 @@ on the command-line. The second form lists the PPD file provided
 on the standard input. The second form can be used to test
 compressed PPD files using the appropriate utility.
 .LP
+The \fI-q\fR option specifies that no information should be displayed.
+.LP
 The \fI-v\fR option specifies that all information in the PPD file
 should be displayed in addition to the conformance testing results.
+.LP
+The \fI-q\fR and \fI-v\fR options are mutually exclusive.
 .SH EXIT STATUS
 \fIcupstestppd\fR returns zero on success and non-zero on error. The
 error codes are as follows:
@@ -63,6 +67,14 @@ The PPD file contains format errors that cannot be skipped.
 4
 .br
 The PPD file does not conform to the Adobe PPD specification.
+.SH EXAMPLES
+The following command will test all PPD files in the current directory
+and print the names of each file that does not conform:
+.nf
+
+    find . -name \\*.ppd -exec cupstestppd -q '{}' \\; -print
+
+.fi
 .SH SEE ALSO
 CUPS Software Administrators Manual,
 CUPS Software Programmers Manual,
@@ -70,5 +82,5 @@ http://localhost:631/documentation.html
 .SH COPYRIGHT
 Copyright 1993-2003 by Easy Software Products, All Rights Reserved.
 .\"
-.\" End of "$Id: cupstestppd.man,v 1.2 2002/12/17 18:59:56 swdev Exp $".
+.\" End of "$Id: cupstestppd.man,v 1.3 2003/01/24 21:32:13 mike Exp $".
 .\"
